adding open page rank and dns entrys
