# server.js
@@ -1,8 +1,12 @@
+require('dotenv').config();
+
 const express = require('express'), //We are using express for the API
     app = express(),
-    port = 3000, //Using port 3000
+    port = process.env.PORT, //Using port 3000
     bodyParser = require('body-parser'),
-    wappFunctions = require("./wappalyzer-function.js"),
+    wappFunctions = require("./functions/wappalyzer-function.js"),
+    pagerankFunctions = require("./functions/openpagerank-functions.js"),
+    dnsFunctions = require("./functions/dns-functions.js"),
     isValidDomain = require('is-valid-domain'),
     swaggerUi = require('swagger-ui-express');
     swaggerDocument = require('./swagger.json');
@@ -11,11 +15,10 @@ app.use(bodyParser.urlencoded({
     extended: true
 }));
 app.use(bodyParser.json());
-
 app.listen(port);
 
 /*
-    Path used to test one domain with wappalyzer
+    Path used to test domain with wappalyzer
 */
 app.get("/domain_data", (req, res, next) => {
     var queryResults = req.query;
@@ -25,6 +28,53 @@ app.get("/domain_data", (req, res, next) => {
     } else {
         res.status(422).send("you need to specify a valid domain without the protocol and path");
     }
+});
+
+/*
+    Path used to test up to 100 domains with openpagerank
+*/
+app.get("/page_rank", (req, res, next) => {
+  var queryResults = req.query;
+  var urls = queryResults["urls"].split(",");
+  var goodURLS = [];
+  var badURLS = [];
+  for (x in urls){
+    if (isValidDomain(urls[x], {subdomain: false})){
+      goodURLS.push(urls[x]);
+    } else {
+      badURLS.push(urls[x]);
+    }
+  }
+  if (goodURLS.length > 0){
+    pagerankFunctions.runPageRank(goodURLS, badURLS, res);
+  } else {
+    res.status(422).send("there are no valid domains in the list.");
+  }
+});
+
+
+/*
+    Path used to get DNS info for a domain
+*/
+//NS data
+app.get("/dns_info/ns", (req, res, next) => {
+  var queryResults = req.query;
+  var url = queryResults["url"];
+  if (isValidDomain(url, {subdomain: false})) {
+    dnsFunctions.getNSInfo(url, res);
+  } else {
+    res.status(422).send("you need to specify a valid domain without the protocol and path");
+  }
+});
+//CNAME data
+app.get("/dns_info/cname", (req, res, next) => {
+  var queryResults = req.query;
+  var url = queryResults["url"];
+  if (isValidDomain(url, {subdomain: true})) {
+    dnsFunctions.getCNAMEInfo(url, res);
+  } else {
+    res.status(422).send("you need to specify a valid domain without the protocol and path");
+  }
 });
 
 /*
